--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
-  "name": "chaplincoin",
+  "name": "chaplin-coin",
   "version": "1.0.0",
-  "description": "Simple Blockchain",
+  "description": "Cryptocurrency proof of concept",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node build/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thomaschaplin/chaplin-coin.git"
+  },
+  "keywords": [
+    "chaplincoin",
+    "thomaschaplin",
+    "thomas",
+    "chaplin",
+    "cryptocurrency",
+    "blockchain"
+  ],
   "author": "Thomas Chaplin",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thomaschaplin/chaplin-coin/issues"
+  },
+  "homepage": "https://github.com/thomaschaplin/chaplin-coin#readme",
   "dependencies": {
-    "object-hash": "^1.3.1"
+    "@types/node": "^14.14.31",
+    "typescript": "^4.2.2"
   }
 }
